--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="check_guide1"> *예약변경*\nstep1. 예약취소\nstep2. 다시예약
+    <string name="check_guide1"> \n\n*예약변경*\nstep1. 예약취소\nstep2. 다시예약
     \n\n*가급적 2시간 전에 예약 부탁드립니다*\n\n
-        *생어거스틴 도곡점 홀 이용가능시간*\n11am ~ 9pm
+        *생어거스틴 도곡점 홀 이용가능시간*\n11am ~ 9pm\n\n\n
     </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
